2005-11-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JScrollPane/createHorizontalScrollBar.java: 
	New test,
	* gnu/testlet/javax/swing/JScrollPane/createVerticalScrollBar.java:
	New test.

2005-11-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JScrollBar/constructors.java: New test.

2005-11-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/JComponent/getListeners.java: New test.

2005-11-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Container/getListeners.java: New test.

2005-11-23  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/awt/Component/getListeners.java: New test.

2005-11-23  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/insert.java: Fixed some tests.

2005-11-23  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/insert.java: Added new tests for this class.

2005-11-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/MaskFormatterTest.java: Added more 
	tests.

2005-11-22  Anthony Balkissoon  <abalkiss@redhat.com>

	* gnu/testlet/javax/swing/text/MaskFormatterTest.java: New test.

2005-11-22  Roman Kennke  <kennke@aicas.com>

	* gnu/testlet/javax/swing/text/DefaultStyledDocument/ElementBuffer/insert.java: New test.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/Size2DSyntax: New directory.
	* gnu/testlet/javax/print/attribute/Size2DSyntax/simple.java: New Test. 

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/ResolutionSyntax/simple.java (test):
	Added test for special toString case and bundle them into a checkpoint.

2005-11-19  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/testlet/javax/print/attribute/TextSyntax: New directory.
	* gnu/testlet/javax/print/attribute/TextSyntax/constructors.java: